Fixed awkward team page padding on mobile

--- a/css/grid.sass
+++ b/css/grid.sass
@@ -30,3 +30,7 @@ h5
 footer h5
     margin: auto
     margin-top: 30px
+
+@media (max-width: 390px)
+    article
+        padding: 5px
